kubernetes/apps/yk-update-checker/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yk-update-checker
  namespace: yk-update-checker
spec:
  parentRefs:
    - name: internal
      namespace: main-gateway
      sectionName: https-yk-updates
  hostnames:
    - "yk-updates.yuriy-lab.cloud"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: yk-update-checker
          port: 8080
